SubBt/force-app/main/default/objects/Expense_Line__c/Expense_Line__c.object-meta.xml
<CustomObject>
    <label>Expense Line</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Expense Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>