SubBt/force-app/main/default/objects/Expense_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of the Expense</inlineHelpText>
    <label>Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>